# Paddle-Inference-Demo

./: .gitignore  README.md  jit_inference.md  paddle_triton.md
c++/: README.md  run_demo.sh
c++/LIC2020/: README.md  compile.sh  demo.cc  run.sh  run_impl.sh
c++/advanced/custom-operator/: CMakeLists.txt  README.md  compile.sh  custom_op_test.cc  custom_relu_op.cc  custom_relu_op.cu  custom_relu_op_dynamic_plugin.cu  custom_relu_op_dynamic_plugin.h  custom_relu_op_plugin.cu  custom_relu_op_plugin.h
c++/advanced/custom-operator-generic-plugin/: CMakeLists.txt  README.md  compile.sh  custom_gap_op.cu  custom_gap_op_test.cc  run.sh
c++/advanced/custom-pass-operator/: README.md  compile.sh  custom_pass_test.cc  run.sh
c++/advanced/multi_thread/: README.md  compile.sh  multi_thread_test.cc  run.sh
c++/advanced/share_external_data/: README.md  compile.sh  run.sh  (+1 more)
c++/advanced/x86_gru_int8/: CMakeLists.txt  README.md  run.sh
c++/cuda_linux_demo/: CMakeLists.txt  README.md  compile.sh  model_test.cc  run.sh  run_impl.sh
c++/custom-operator/: CMakeLists.txt  README.md  compile.sh  custom_op_test.cc  custom_relu_op.cc  custom_relu_op.cu  custom_relu_op_dup.cc  run.sh
c++/ernie-varlen/: README.md  compile.sh  ernie_varlen_test.cc  run_impl.sh
c++/ipu/: README.md  compile.sh  resnet50_test.cc
c++/ipu/custom_ops/: CMakeLists.txt  README.md  compile.sh  custom_op_test.cc  custom_relu_op.cc  custom_relu_op_ipu.cc
c++/lib/: CMakeLists.txt
c++/paddle-ipu/: README.md  run.sh
c++/paddle-onnxruntime/: CMakeLists.txt  README.md  compile.sh  onnxruntime_mobilenet_demo.cc  run.sh
c++/paddle-trt/: README.md  compile.sh  run.sh  run_impl.sh  trt_dynamic_shape_test.cc  trt_fp32_test.cc  trt_gen_calib_table_test.cc  trt_int8_test.cc
c++/paddle_infer_demo/: CMakeLists.txt  README.md  run.sh  test_yolov3.py  yolov3_test.cc
c++/resnet50/: README.md  compile.sh  resnet50_share_data.cc  resnet50_test.cc  run.sh  run_impl.sh
c++/x86_gru_int8/: CMakeLists.txt  README.md  lac.cc  lac.h  lac_util.cc  lac_util.h  model_test.cc  run.sh
c++/x86_linux_demo/: CMakeLists.txt  README.md  compile.sh  model_test.cc  run_impl.sh
c++/yolov3/: README.md  compile.sh  run_impl.sh  yolov3_demo  yolov3_test.cc
docs/: conf.py  index.rst  requirements.txt
docs-new/: index.rst  requirements.txt
docs-new/api_reference/: cxx_api_index.rst  go_api_index.rst  python_api_index.rst
docs-new/benchmark/: benchmark_cpu.md  benchmark_gpu.md
docs-new/cpu_inference/: README.md  paddle_x86_cpu_bf16.md  paddle_x86_cpu_int8.md
docs-new/debug/: performance_analysis_profiler.md  precision_tracing.md
docs-new/demo_introduction/: demo_introduction.md
docs-new/demo_tutorial/: cuda_jetson_demo.md  x86_linux_demo.md  x86_windows_demo.md
docs-new/export_model/: README.md  outside_model_export.rst  paddle_model_export.md  visual_model.rst
docs-new/hardware_support/: cpu_loongson_cn.md  cpu_phytium_cn.md  cpu_sunway_cn.md  cpu_zhaoxin_cn.md  dcu_hygon_cn.md  index_cn.rst  ipu_graphcore_cn.md  npu_ascend_cn.md  xpu_kunlun_cn.md
docs-new/introduction/: faq_env_compile.md  faq_profiling.md  faq_runtime_error.md
docs-new/nvidia_jetson_deployment/: gpu_fp16_int8.md  gpu_native_infer.md  gpu_trt_infer.md  outline.md
docs-new/optimize/: paddle_trt_en.rst  paddle_x86_cpu_bf16.md
docs-new/performance_tuning/: concurrency.md  mix_precision.md  multi_stream.md  multi_thread.md  tune_overview.md
docs-new/product_introduction/: inference_intro.md  roadmap.md  summary.md
docs-new/quick_start/: c_cpp_install.md  c_demo.md  c_install.md  cpp_demo.md  cpp_install.md  go_demo.md  python_demo.md  python_install.md  quick_start.md  r_demo.md  workflow.md
docs-new/tools/: visual.rst
docs-new/user_guides/: compile_ZHAOXIN.md  download_lib.md  go_install.md  install_overview.md  source_compile.md  source_compile_under_Linux.md  source_compile_under_MacOs.md  source_compile_under_Windows.md
docs-official/: .gitignore  conf.py  index.rst  requirements.txt
docs-official/_templates/: layout.html
docs-official/api_reference/: index_api.rst
docs-official/demo_tutorial/: cuda_jetson_demo.md  cuda_linux_demo.md  cuda_windows_demo.md  paddle_xpu_infer_cn.md  x86_linux_demo.md  x86_windows_demo.md
docs-official/faq/: faq_env_compile.md  faq_profiling.md  faq_runtime_error.md  index_faq.rst
docs-official/guides/: conf.py  demo_introduction.md  index_guides.rst
docs/_static/: theme_overrides.css
docs/api_reference/: c_api_index.rst  java_api_index.rst  python_api_index.rst
docs/benchmark/: benchmark.md  paddletrt-benchmark.md
docs/demo_tutorial/: cuda_jetson_demo.md  cuda_linux_demo.md  cuda_windows_demo.md  x86_linux_demo  x86_linux_demo.md  x86_windows_demo.md
docs/introduction/: Paddle Inference FAQ.md  faq.md  quick_start.md  quick_start.rst  summary.md  training_to_deployment.md
docs/optimize/: paddle_trt.md  paddle_trt.rst  paddle_trt_ch.rst  paddle_trt_en.rst  paddle_x86_cpu_bf16.md  paddle_x86_cpu_int8.md
docs/product_introduction/: inference_intro.md  summary.md
docs/quick_start/: c_demo.md  cpp_demo.md  go_demo.md  golang_demo.md  python_demo.md  r_demo.md  workflow.md
docs/tools/: visual.md  visual.rst
docs/user_guides/: compile_ARM.md  compile_MIPS.md  compile_SW.md  compile_ZHAOXIN.md  cxx_api.md  download_lib.md  inference_python_api.md  inference_python_api.rst  source_compile.md  source_compile.rst  tutorial.md  tutorial.rst
go/resnet50/: README.md  demo.go
java/: test.md  飞桨技术评审文档.md
java/resnet50/: README.md  demo.java
python/: README.md  run_demo.sh
python/ELMo/: README.md  infer.py  run.sh
python/LIC2020/: README.md
python/cuda_linux_demo/: README.md  model_test.py
python/custom-operator/: README.md  train_and_infer.py
python/mask_detection/: config.py
python/paddle_trt/: README.md  infer_trt_ernie.py
python/resnet50/: README.md  img_preprocess.py  infer_resnet.py
python/x86_linux_demo/: README.md  model_test.py  run.sh
python/x86_lstm_demo/: README.md  data_reader.py  model_test.py  run.sh
python/yolov3/: README.md  infer_yolov3.py  utils.py
(+629 files in other folders)
